#28 class IntList